--- a/itatix_purchase_discount/views/account_move_view.xml
+++ b/itatix_purchase_discount/views/account_move_view.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]/field[@name='invoice_line_ids']/tree[1]/field[@name='price_unit']" position="after">
-                <field name="vendor_discount" string="Proveedor Desc%" readonly="1" force_save="1"/>
+                <field name="vendor_discount" string="Proveedor Desc%" readonly="1" force_save="1" optional="hide"/>
             </xpath>
         </field>
     </record>
