--- a/itatix_purchase_discount/views/report_purchaseorder.xml
+++ b/itatix_purchase_discount/views/report_purchaseorder.xml
@@ -2,8 +2,7 @@
 <odoo>
     <template
         id="report_purchaseorder_document_inherit"
-        inherit_id="purchase.report_purchaseorder_document"
-    >
+        inherit_id="purchase.report_purchaseorder_document">
         <xpath expr="/t/t[1]" position="attributes">
             <attribute name="t-call">itatix_purchase_discount.external_purchase_layout</attribute>
         </xpath>
@@ -78,6 +77,19 @@
                 <div class="col-3"/>
                 <div class="col-3"/>
             </div>
+        </xpath>
+        <xpath expr="//tbody/t[1]" position="after">
+            <t t-set="counter" t-value="0"/>
+        </xpath>
+        <xpath expr="//thead/tr/th[1]" position="before">
+            <th id="head_counter">
+            </th>
+        </xpath>
+        <xpath expr="//tbody/t[3]/tr/t[1]/td[1]" position="before">
+            <td>
+                <t t-set="counter" t-value="counter + 1"/>
+                <t t-esc="counter"/>
+            </td>
         </xpath>
     </template>
 </odoo>
