--- a/itatix_brand_product/views/sama_views.xml
+++ b/itatix_brand_product/views/sama_views.xml
@@ -49,11 +49,9 @@
             <field name="res_model">sama.subcategory</field>
             <field name="view_mode">tree,form</field>
         </record>
-        <!-- Menu item root -->
-        <menuitem id="sama_menu_parent" name="Sama" parent="sale.sale_menu_root" sequence="4"/>
         <!-- Submenu item parent root -->
-        <menuitem id="sama_menu_brand" name="Brand" parent="itatix_brand_product.sama_menu_parent" action="sama_brand_action"/>
-        <menuitem id="sama_menu_category" name="Category" parent="itatix_brand_product.sama_menu_parent" action="sama_category_action"/>
-        <menuitem id="sama_menu_subcategory" name="Subcategory" parent="itatix_brand_product.sama_menu_parent" action="sama_subcategory_action"/>
+        <menuitem id="sama_menu_brand" name="Brand" parent="sale.menu_sale_config" action="sama_brand_action"/>
+        <menuitem id="sama_menu_category" name="Category" parent="sale.menu_sale_config" action="sama_category_action"/>
+        <menuitem id="sama_menu_subcategory" name="Subcategory" parent="sale.menu_sale_config" action="sama_subcategory_action"/>
     </data>
 </odoo>
