--- a/itatix_sales_person_target/views/views.xml
+++ b/itatix_sales_person_target/views/views.xml
@@ -177,6 +177,17 @@
 			</field>
 		</field>
 	</record>
+	    <!-- Inherit Form View to Modify it -->
+    <record id="sale_order_currency_rate_view_order_form" model="ir.ui.view">
+        <field name="name">sale.order.currency_rate_view_order_form</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='fiscal_position_id']" position="after">
+                <field name="exchange_currency_rate" invisible="1"/>
+            </xpath>
+        </field>
+    </record>
 	<record id="kanban_sales_target_report_view" model="ir.ui.view">
 	 <field name="name">sales.target.kanban</field>
 	  <field name="model">sales.target</field>
@@ -238,7 +249,19 @@
 		 </kanban>
 	 </field>
 	</record>
-
+	<record id="crm_team_salesteams_view_inherit_kanban" model="ir.ui.view">
+	 <field name="name">crm.team_salesteam_invoiced_target</field>
+	  <field name="model">crm.team</field>
+	  <field name="inherit_id" ref="sales_team.crm_team_salesteams_view_kanban"/>
+		<field name="arch" type="xml">
+		 <xpath expr="//field[@name='name']" position="after">
+			 <span>
+				 <h4><strong>Meta de facturación:</strong></h4>
+				 <field name="invoiced_target"/>
+			 </span>
+		 </xpath>
+	 </field>
+	</record>
 	<record id="action_sales_target_report" model="ir.actions.act_window">
 		<field name="name">Target Analysis</field>
 		<field name="res_model">sales.target</field>
