--- a/itatix_sales/views/sale_order_view.xml
+++ b/itatix_sales/views/sale_order_view.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="before">
                 <field name="real_cost"/>
-                <field name="real_cost_subtotal"/>
+                <field name="real_cost_subtotal" optional="hide"/>
                 <field name="real_margin" invisible="1"/>
                 <field name="real_margin_percent" invisible="1"/>
             </xpath>
