--- a/account_custom_sama/views/account_move.xml
+++ b/account_custom_sama/views/account_move.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
   <data>
-        
+
     <!-- Update account invoice search view!-->
     <record id="view_account_invoice_filter" model="ir.ui.view">
       <field name="name">account.move.sama</field>
@@ -16,7 +16,7 @@
         </xpath>
       </field>
     </record>
-        
+
     <record id="account_move_tree_billing_goal" model="ir.ui.view">
       <field name="name">account.move.tree.billing_goal</field>
       <field name="model">account.move</field>
@@ -38,7 +38,36 @@
           <xpath expr="//field[@name='payment_reference']" position="after">
             <field name="sama_brand_id"/>
           </xpath>
+          <xpath expr="//notebook/page[1]/field[@name='invoice_line_ids']/tree/field[@name='price_unit']" position="after">
+            <field name="real_cost" optional="hide"/>
+            <field name="real_cost_subtotal" optional="hide"/>
+            <field name="real_margin" optional="hide"/>
+            <field name="real_margin_percent" optional="hide"/>
+          </xpath>
+            <field name="amount_total" position="after">
+                <field name="total_real_cost"/>
+                <label for="real_margin" groups="base.group_user"/>
+                <div class="text-nowrap" groups="base.group_user">
+                    <field name="real_margin" class="oe_inline"/>
+                    <span class="oe_inline" attrs="{'invisible': [('amount_untaxed', '=', 0)]}">
+                        (<field name="real_margin_percent" nolabel="1" class="oe_inline" widget="percentage"/>)
+                    </span>
+                </div>
+            </field>
         </data>
+      </field>
+    </record>
+
+     <record id="view_out_invoice_tree_view" model="ir.ui.view">
+      <field name="name">view.out.invoice.tree.view</field>
+      <field name="model">account.move</field>
+      <field name="inherit_id" ref="account.view_out_invoice_tree"/>
+      <field name="arch" type="xml">
+        <xpath expr="//field[@name='payment_state']" position="after">
+            <field name="total_real_cost" optional="hide"/>
+            <field name="real_margin" optional="hide" />
+            <field name="real_margin_percent" optional="hide" widget="percentage"/>
+        </xpath>
       </field>
     </record>
 
