--- a/itatix_sales/views/sale_order_view.xml
+++ b/itatix_sales/views/sale_order_view.xml
@@ -53,7 +53,8 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='price_total']" position="after">
                 <field name="real_margin" type="measure"/>
-                 <field name="real_margin_percent" type="measure"/>
+                <field name="real_margin_percent" type="measure"/>
+                 <field name="real_cost" type="measure"/>
             </xpath>
         </field>
     </record>
@@ -65,6 +66,7 @@
             <xpath expr="//field[@name='price_subtotal']" position="after">
                 <field name="real_margin" type="measure"/>
                 <field name="real_margin_percent" type="measure"/>
+                <field name="real_cost" type="measure"/>
             </xpath>
         </field>
     </record>
