--- a/sale_exception/wizard/sale_exception_confirm_view.xml
+++ b/sale_exception/wizard/sale_exception_confirm_view.xml
@@ -14,7 +14,7 @@
                         </tree>
                     </field>
                     <newline />
-                    <field name="ignore" groups='sales_team.group_sale_manager' />
+                    <!--<field name="ignore" groups='sales_team.group_sale_manager' />-->
                 </group>
                 <footer>
                     <button
