--- a/itatix_region/views/crm_lead_view.xml
+++ b/itatix_region/views/crm_lead_view.xml
@@ -5,7 +5,7 @@
         <field name="inherit_id" ref="crm.crm_lead_view_form"/>
         <field name="arch" type="xml">
             <field name="team_id" position="after">
-                <field name="region_id"/>
+                <field name="region_id" options="{'no_create': True,'no_edit': True, 'no_open': True}" widget="selection"/>
             </field>
         </field>
     </record>
