--- a/account_custom_sama/report/invoice_report_sama_view.xml
+++ b/account_custom_sama/report/invoice_report_sama_view.xml
@@ -59,6 +59,7 @@
                 <filter name="filter_date_order" date="date_order"/>
                 <field name="user_id" />
                 <field name="team_id"/>
+                <field name="region_id"/>
                 <field name="product_id" />
                 <field name="product_categ_id" filter_domain="[('product_categ_id', 'child_of', self)]"/>
                 <field name="product_sama_category_id"/>
@@ -67,6 +68,7 @@
                 <group expand="1" string="Group By">
                     <filter string="Salesperson" name='user' context="{'group_by':'user_id'}"/>
                     <filter string="Sales Team" name="sales_channel" domain="[]" context="{'group_by':'team_id'}"/>
+                    <filter string="Region" name="region" domain="[]" context="{'group_by':'region_id'}"/>
                     <filter string="Product Category" name="category_product" context="{'group_by':'product_categ_id','residual_invisible':True}"/>
                     <filter string="SAMA Category" name="groupby_product_sama_category_id" context="{'group_by': 'product_sama_category_id'}"/>
                     <filter string="SAMA Sub-Category" name="groupby_product_sama_subcategory_id" context="{'group_by': 'product_sama_subcategory_id'}"/>
