--- a/itatix_region/views/res_partner_view.xml
+++ b/itatix_region/views/res_partner_view.xml
@@ -3,7 +3,7 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form" />
         <field name="arch" type="xml">
-            <xpath expr="//sheet/group/group[2]/field[@name='phone']" position="before">
+            <xpath expr="//sheet/group/group[2]/field[@name='function']" position="before">
                <field name="region_id" ptions="{'no_create': True, 'no_quick_create': True, 'no_create_edit':True}"/>
             </xpath>
         </field>
