--- a/itatix_region/views/account_move_view.xml
+++ b/itatix_region/views/account_move_view.xml
@@ -5,7 +5,7 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <field name="payment_reference" position="after">
-                <field name="region_id"/>
+                <field name="region_id" options="{'no_create': True, 'no_quick_create': True, 'no_create_edit':True}" widget="selection"/>
             </field>
         </field>
     </record>
