--- a/itatix_region/views/res_partner_view.xml
+++ b/itatix_region/views/res_partner_view.xml
@@ -4,7 +4,7 @@
         <field name="inherit_id" ref="base.view_partner_form" />
         <field name="arch" type="xml">
             <xpath expr="//sheet/group/group[2]/field[@name='function']" position="before">
-               <field name="region_id" ptions="{'no_create': True, 'no_quick_create': True, 'no_create_edit':True}"/>
+               <field name="region_id" options="{'no_create': True, 'no_quick_create': True, 'no_create_edit':True}" widget="selection"/>
             </xpath>
         </field>
     </record>
