--- a/itatix_sales_person_target/views/views.xml
+++ b/itatix_sales_person_target/views/views.xml
@@ -4,32 +4,23 @@
 		<field name="name">sale_target_lines_view_tree</field>
 		<field name="model">sales.target.lines</field>
 		<field name="arch" type="xml">
-			<tree create="false" editable="bottom" delete="false">
+			<tree create="0" editable="bottom" delete="0">
+				<field name="monthly_target_dynamic_required" invisible="1" force_save="1" />
 				<field name="date_order" readonly="1" force_save="1"/>
 				<field name="user_id" readonly="1" force_save="1"/>
 				<field name="region_id"/>
-				<field name="monthly_target" string="Quota" readonly="1" force_save="1"/>
+				<field name="monthly_target" string="Quota" force_save="1" attrs="{'required': [('monthly_target_dynamic_required', '=', True)]}"/>
 				<field name="currency_id" readonly="1" force_save="1"/>
 				<field name="monthly_target_achieve" readonly="1" force_save="1"/>
 				<field name="current_year" readonly="1" force_save="1"/>
 				<field name="no_of_sales" readonly="1" force_save="1"/>
 				<field name="monthly_target_achieve_per" readonly="1" force_save="1"/>
 				<field name="target_id" invisible="1"/>
-        <field name="company_id" groups="base.group_multi_company" optional="show" readonly="1"/>
+        		<field name="company_id" groups="base.group_multi_company" optional="show" readonly="1"/>
 			</tree>
 		</field>
 	</record>
-	<record id="sales_target_lines_view_tree" model="ir.ui.view">
-	    <field name="name">sales.target.lines_view_tree_inherit</field>
-	    <field name="model">sales.target.lines</field>
-	    <field name="inherit_id" ref="itatix_sales_person_target.sale_target_lines_view_tree"/>
-		<field name="groups_id" eval="[(4, ref('itatix_sales_person_target.group_team_leader'))]"/>
-	    <field name="arch" type="xml">
-	        <xpath expr="//field[@name='monthly_target']" position="attributes">
-				<attribute name="readonly">False</attribute>
-	        </xpath>
-	    </field>
-	</record>
+
 	<record id="action_sales_target_lines" model="ir.actions.act_window">
 		<field name="name">Target Lines</field>
 		<field name="res_model">sales.target.lines</field>
@@ -39,6 +30,7 @@
 		<field name="context">{'search_default_current_year':1}</field>
 		<field name="target">new</field>
 	</record>
+	
 	<record id="sale_target_lines_search_view" model="ir.ui.view">
 	   <field name="name">sale.target.lines.search</field>
 	   <field name="model">sales.target.lines</field>
@@ -56,26 +48,24 @@
 		<field name="name">sales.target.form.view</field>
 		<field name="model">sales.target</field>
 		<field name="arch" type="xml">
-			<form edit="false" create="false">
+			<form>
 				<sheet>
 					<div class="oe_button_box" name="button_box">
 						<button string="Target Lines" class="oe_stat_button oe_read_only" icon="fa-list" name="%(action_sales_target_lines)d" type="action"/>
 					</div>
 					<group>
 						<group>
+							<field name="dynamic_salesperson_domain" invisible="1" />
 							<field name="region_id" options="{'no_create': True}"/>
 							<field name="sales_team_id" options="{'no_create': True}"/>
 							<field name="team_leader" readonly="1" force_save="1"/>
-							<field name="salesperson" required="1" options="{'no_create': True}"/>
+							<field name="salesperson" required="1" options="{'no_create': True}" domain="[('id', 'in', dynamic_salesperson_domain)]"/>
 						</group>
 						<group>
 							<field name="target" string="Current Target" widget="monetary" invisible="1"/>
-							<div>
-								<label for="currency_id"/>
-								<field name="currency_id" class="oe_inline" required="1" options="{'no_open': True, 'no_create': True}"/>
-							</div>
+							<field name="currency_id" required="1" options="{'no_open': True, 'no_create': True}"/>
 							<field name="monthly_target" invisible="1" widget="monetary"/>
-              <field name="company_id" groups="base.group_multi_company" readonly="1"/>
+              				<field name="company_id" groups="base.group_multi_company" readonly="1"/>
 						</group>
 						<group>
 							<field name="start_date" invisible="1"/>
@@ -103,19 +93,7 @@
 			</form>
 		</field>
 	</record>
-<!-- Inherit Form View to Modify it -->
-	<record id="sales_target_form_inherit_view" model="ir.ui.view">
-		<field name="name">sales.target.form.inherit</field>
-		<field name="model">sales.target</field>
-		<field name="inherit_id" ref="itatix_sales_person_target.sales_target_form_view"/>
-		<field name="groups_id" eval="[(4, ref('itatix_sales_person_target.group_team_leader'))]"/>
-		<field name="arch" type="xml">
-			<xpath expr="//form[1]" position="attributes">
-				<attribute name="create">true</attribute>
-				<attribute name="edit">true</attribute>
-			</xpath>
-		</field>
-	</record>
+
 	<!-- Sales Target Tree View -->
 	<record id="sales_target_tree_view" model="ir.ui.view">
 		<field name="name">sale.target.tree.view</field>
@@ -136,7 +114,6 @@
 			</tree>
 		</field>
 	</record>
-
 
 	<record id="sale_view_order_product_search_inherit" model="ir.ui.view">
 		<field name="name">sale.report.search.inherit</field>
@@ -181,7 +158,8 @@
 			</field>
 		</field>
 	</record>
-	    <!-- Inherit Form View to Modify it -->
+	
+	<!-- Inherit Form View to Modify it -->
     <record id="sale_order_currency_rate_view_order_form" model="ir.ui.view">
         <field name="name">sale.order.currency_rate_view_order_form</field>
         <field name="model">sale.order</field>
@@ -192,6 +170,7 @@
             </xpath>
         </field>
     </record>
+	
 	<record id="kanban_sales_target_report_view" model="ir.ui.view">
 	 <field name="name">sales.target.kanban</field>
 	  <field name="model">sales.target</field>
@@ -253,10 +232,11 @@
 		 </kanban>
 	 </field>
 	</record>
+	
 	<record id="crm_team_salesteams_view_inherit_kanban" model="ir.ui.view">
 	 <field name="name">crm.team_salesteam_invoiced_target</field>
 	  <field name="model">crm.team</field>
-	  <field name="inherit_id" ref="sales_team.crm_team_salesteams_view_kanban"/>
+	  <field name="inherit_id" ref="sales_team.crm_team_view_kanban_dashboard"/>
 		<field name="arch" type="xml">
 		 <xpath expr="//field[@name='name']" position="after">
 			 <span>
@@ -266,6 +246,7 @@
 		 </xpath>
 	 </field>
 	</record>
+	
 	<record id="action_sales_target_report" model="ir.actions.act_window">
 		<field name="name">Target Analysis</field>
 		<field name="res_model">sales.target</field>
@@ -289,10 +270,4 @@
 	<!-- Sales Target Menuitem -->
 	<menuitem id="menu_sales_target" parent="sale.sale_order_menu"
 			  sequence="10" action="sales_target_action"/>
-
-	<!--menuitem id="sale.sale_order_menu" name="Configuration"
-			  parent="sale.sale_menu_root" sequence="6"/>
-
-	<menuitem id="sale.menu_sale_report" name="Reporting"
-			  parent="sale.sale_menu_root" sequence="5"/-->
 </odoo>
