[MIG] modules to v17

--- a/account_custom_sama/views/account_move.xml
+++ b/account_custom_sama/views/account_move.xml
@@ -23,7 +23,7 @@
       <field name="inherit_id" ref="account.view_invoice_tree"/>
       <field name="arch" type="xml">
         <xpath expr="//field[@name='company_id']" position="after">
-          <field name="sama_brand_id" optional="hide" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')"/>
+          <field name="sama_brand_id" optional="hide" column_invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund', 'out_receipt')"/>
         </xpath>
       </field>
     </record>
