--- a/itatix_account_extended/views/account_move.xml
+++ b/itatix_account_extended/views/account_move.xml
@@ -25,7 +25,7 @@
             <label for="real_margin" groups="base.group_user"/>
             <div class="text-nowrap" groups="base.group_user">
                 <field name="real_margin" class="oe_inline"/>
-                <span class="oe_inline" attrs="{'invisible': [('amount_untaxed', '=', 0)]}">
+                <span class="oe_inline" invisible="amount_untaxed == 0">
                     (<field name="real_margin_percent" nolabel="1" class="oe_inline" widget="percentage"/>)
                 </span>
             </div>
