--- a/sale_other_reference/views/account_move_view.xml
+++ b/sale_other_reference/views/account_move_view.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <field name="payment_reference" position="after">
-                <field name="purchase_order_reference" attrs="{'invisible': [('move_type', 'not in', ('out_invoice', 'out_refund'))]}" groups="sale_other_reference.group_display_purchase_order"/>
+                <field name="purchase_order_reference" invisible="move_type not in ('out_invoice', 'out_refund')" groups="sale_other_reference.group_display_purchase_order"/>
             </field>
         </field>
     </record>
